fix: web contrast and variable naming in manual_t_test.r in T-Test or Z-Test?

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,13 +33,13 @@ html {
 }
 
 body {
-  --backgroundColor: #f3f3f3;
-  --fontColor: black;
-  --headerColor: #131313;
+  --backgroundColor: #ffffff;
+  --fontColor: #000000;
+  --headerColor: #000000;
   --linkColor: #0000bf;
   --codeColor: #d23669;
-  --activeLink: #131313;
-  --inactiveLink: #a6a6a6;
+  --activeLink: #000000;
+  --inactiveLink: #999999;
   --codeblockTitle: #e6d9bb;
   --underlinedColor: #DC2626;
   --filter: opacity(1), contrast(1);
@@ -52,7 +52,7 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   filter: var(--filter);
-  transition: background 0.3s ease-in-out;
+  transition: background 0.5s ease-in-out;
 }
 
 body.dark {
@@ -82,26 +82,26 @@ main {
 /* Menu links */
 .headerLink {
   text-decoration: none;
-  transition: color 0.3s ease-out;
+  color: var(--linkColor);
+  transition: color 0.5s ease-in-out;
 }
 
 .headerLink:hover {
-  color: var(--activeLink) !important;
-}
-
-/* footer links */
-.footerLink:hover {
-  color: var(--activeLink) !important;
+  text-decoration: none !important;
 }
 
 /* HTML Body */
-u {
+em {
   color: var(--underlinedColor) !important;
 }
 
 a {
   text-decoration: underline;
   color: var(--linkColor);
+}
+
+a:hover {
+  text-decoration: none;
 }
 
 h1,
